...
    <string name="person_description">Photo of %1$s</string>
    <string name="parent_series">View series: %1$s</string>
    <string name="season_value">Season %1$d: %2$s</string>
    <string name="no_season">Season</string>
    <string name="season_number">Season %1$d</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="select_season">Select season</string>
    <string name="appearance_group">Appearance</string>
    <string name="appearance_settings_summary">Language and metadata</string>
    <string name="interface_language">Interface language</string>
    <string name="interface_language_automatic">Automatic (device language)</string>
    <string name="language_english">English</string>
...
